--- a/ProjetoLibDowload/app/src/main/AndroidManifest.xml
+++ b/ProjetoLibDowload/app/src/main/AndroidManifest.xml
@@ -18,7 +18,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ReproducaoVideoActivity"></activity>
+        <activity android:name=".ReproducaoVideoActivity" />
+        <activity android:name=".ReproducaoMusicaActivity"></activity>
     </application>
 
 </manifest>
