--- a/ProjetoLibDowload/app/src/main/AndroidManifest.xml
+++ b/ProjetoLibDowload/app/src/main/AndroidManifest.xml
@@ -2,13 +2,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="br.edu.fbv.projetolibdowload">
 
-    <uses-feature android:name="android.hardware.camera2"
-                  android:required="true"/>
+    <uses-feature
+        android:name="android.hardware.camera2"
+        android:required="true" />
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-
 
     <application
         android:allowBackup="true"
@@ -30,7 +30,8 @@
         <activity android:name=".Activitys.CadastroContato" />
         <activity android:name=".Activitys.ListaContato" />
         <activity android:name=".Activitys.ListVideosActivity" />
-        <activity android:name=".Activitys.ArquivosActivity"></activity>
+        <activity android:name=".Activitys.ArquivosActivity" />
+        <activity android:name=".Activitys.ListaMusicaActivity"></activity>
     </application>
 
 </manifest>
