--- a/ProjetoLibDowload/app/build.gradle
+++ b/ProjetoLibDowload/app/build.gradle
@@ -31,5 +31,6 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.android.support:recyclerview-v7:26.+'
     implementation files('libs/libgerenciamento.jar')
+    implementation 'com.squareup.picasso:picasso:2.71828'
 }
 apply plugin: 'com.google.gms.google-services'
